@@ -57,7 +57,8 @@ public:
   /** Return the path OpenTURNS was installed to */
   static String GetInstallationDirectory();
 
-  /** Return the command line used to configure OpenTURNS */
+  /** Return the command line used to configure OpenTURNS
+   * @deprecated */
   static String GetConfigureCommandLine();
 
   /** Return the precision used for floating %point output */
