@@ -23,6 +23,7 @@
  * Deprecated MonteCarlo, ImportanceSampling, QuasiMonteCarlo, RandomizedQuasiMonteCarlo, RandomizedLHS classes
  * Made MatrixImplementation::isPositiveDefinite const and removed its argument
  * Renamed EfficientGlobalOptimization::setAIETradeoff to setAEITradeoff
+ * Deprecated PlatformInfo::GetConfigureCommandLine.
 
 === Python module ===
 
